--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-lg-5 order-lg-2 order-1">
                     <div class="top-right-img">
-                        <img src="images/home-right.webp" class="img-fluid">
+                        <img src="images/Profile Photo.png" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -98,6 +98,26 @@
       </div>
     </section>
 
+    <!-- Skills Section  -->
+    <section id="skills" class="skilss_wrapper">
+      <div class="col-sm-12 text-center mb-5">
+        <h2>Skills</h2>
+      </div>
+      
+      <div class="progress">
+        <div class="progress-bar " role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">JAVA</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">MySQL</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Selenium</div>
+      </div>
+    </section>
+
     <!-- Projects section  -->
     <section id="projects" class="project_wrapper">
       <div class="container">
@@ -107,11 +127,14 @@
           </div>
           <div class="col-lg-3 col-sm-6 mb-4" >
             <div class="cards rounded-0 border-0 text-center py-5 px-3 ">
-              <div>
-                <img src="./images/services-img/mouse.webp" class="img-fluid" >
-              </div>
-              <h5 class="text-uppercase mt-4 mb-3">Portfolio</h5>
-              <p>Portfolio Website Using Bootstrap 5! <br>HTML,CSS,JS</p>
+              <a href="https://prathameshsahane.github.io/portfolio/" target="_blank">
+                <div>
+                  <img src="./images/services-img/curriculum (1).png" class="img-fluid" >
+                </div>
+                <h5 class="text-uppercase mt-4 mb-3">Portfolio</h5>
+                <p>Portfolio Website Using Bootstrap 5! <br>HTML,CSS,JS</p>
+              </a>
+              
             </div>
           </div>
           <div class="col-lg-3 col-sm-6 mb-4">
@@ -135,7 +158,7 @@
           <div class="col-lg-3 col-sm-6 mb-4">
             <div class="cards rounded-0 border-0 text-center py-5 px-3">
               <div>
-                <img src="./images/services-img/netflix.webp" class="img-fluid">
+                <img src="./images/services-img/netflix.png" class="img-fluid">
               </div>
               <h5 class="text-uppercase mt-4 mb-3">Netflix Homepage Clone</h5>
               <p>Netflix homepage clone</p>
