--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
           </div>
           <div class="col-lg-5 mb-4 mb-lg-0">
             <h3>let’s <br>Introduce about <br>myself</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae veniam dignissimos error quia
-                        ipsam quos rem magni dolores doloribus.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae veniam dignissimos error quia
-                        ipsam quos rem magni dolores doloribus. Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Beatae veniam dignissimos error quia ipsam quos rem magni dolores doloribus.</p>
+            <p>My name is Prathamesh Sahane,hold a B.E. degree in Computer Science</p>
+            <p>I have 1.7 years of experience as an Associate Software Engineer. <br>At present, I am working with Accenture Solutions since August 2021. <br>I have good communication skills as well as good team spirit. <br>I am looking for employment that challenges my knowledge and skills in the software industry</p>
                         <a href="./resume/Prathamesh's Resume.pdf" download class="main-btn primary-btn mt-4">Download CV</a>
           </div>
         </div>
